# nedolens

./: .gitignore  README.md  com.nedogeek.nedolens.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.nedogeek.nedolens.json/: init
.flatpak-builder/checksums/: x86_64-com.nedogeek.nedolens.json
data/: com.nedogeek.nedolens.desktop.in  com.nedogeek.nedolens.gschema.xml  com.nedogeek.nedolens.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.py  integrations.py  main.py  meson.build  nedolens.gresource.xml  nedolens.in  notifications.py  window.py  window.ui
